--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,12 +1,24 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5433/campusdb"
+DATABASE_URL="postgresql://user:password@localhost:5433/campusdb?schema=public"
 
 # JWT
-JWT_SECRET="your-super-secret-jwt-key-change-in-production"
+JWT_SECRET="your-super-secret-jwt-key"
 
 # App URLs
 WEB_APP_URL="http://localhost:5173"
 
 # Server
 PORT=8080
-NODE_ENV=development 
+NODE_ENV=development
+
+# OAuth Providers
+# Note: For development, the callback URL should be http://localhost:8080/api/auth/[provider]/callback
+# You must create developer apps on Google and LinkedIn to get these credentials.
+
+# Google
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# LinkedIn
+LINKEDIN_CLIENT_ID="your-linkedin-client-id"
+LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret" 
