--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
+    "db:push": "prisma db push",
     "studio": "prisma studio",
     "generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
@@ -30,6 +31,7 @@
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
