feat(auth): Implement Two-Factor Authentication (MFA)
Adds a complete, TOTP-based 2FA system to enhance application security.

This feature is enforced across both password and Google OAuth login flows. The implementation includes:
- Backend logic for generating secrets, verifying tokens, and handling recovery codes.
- Database schema updates to the User model.
- Frontend components for enabling/disabling 2FA on the profile page.
- Updates to the login flow to support a two-step verification process.

--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "db:clean": "npm run db:clean --workspace=api"
   },
   "devDependencies": {
-    "turbo": "^1.10.16",
-    "prettier": "^3.1.0"
+    "@types/qrcode": "^1.5.5",
+    "dotenv-cli": "^8.0.0",
+    "prettier": "^3.1.0",
+    "turbo": "^1.10.16"
   },
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
-} 
+  ],
+  "dependencies": {
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
+  }
+}
