feat: simplify development workflow and streamline CI/CD pipeline
## Major Improvements

### 🚀 Simplified Local Development
- Update docker-compose.yml to include API, Web, and Database services
- Add Dockerfile.dev for development with hot reloading support
- Add npm scripts for easy development workflow:
  - `npm run setup`: one-time project setup
  - `npm run docker:dev`: start all services with one command
  - `npm run docker:dev:down`: stop all services
  - `npm run docker:dev:clean`: clean restart
- Update README.md with clear quick start instructions

### ⚡ Streamlined CI/CD Pipeline
- Dramatically simplify .github/workflows/ci-cd.yml (85% reduction: 567→80 lines)
- Remove complex Docker builds and DockerHub dependencies
- Focus on essential pipeline: test → build → simple deployment
- Replace complex deployment scripts with reliable PM2-based approach
- Remove deploy.sh, docker-compose.prod.yml, init-db.sql (no longer needed)

### 🔧 Additional Changes
- Add .env.production.example for production configuration template
- Add nginx.conf for web application serving
- Update database schema with student skill cascade delete fix
- Enhance 2FA controller and authentication routes
- Improve messaging service and related UI components
- Add production setup documentation

## Result
Local development is now truly "just Docker Compose" - developers can start
the entire stack with a single command while maintaining production deployment
reliability through a simplified CI/CD pipeline.

Breaking Change: Local development now requires Docker Compose, but setup is
much simpler than before.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "db:studio": "npm run studio --workspace=apps/api",
     "turbosetup": "cp apps/api/.env.example apps/api/.env",
     "db:seed": "npm run db:seed --workspace=api",
-    "db:clean": "npm run db:clean --workspace=api"
+    "db:clean": "npm run db:clean --workspace=api",
+    "docker:dev": "docker compose up --build",
+    "docker:dev:down": "docker compose down",
+    "docker:dev:clean": "docker compose down -v && docker system prune -f",
+    "setup": "npm install && cp apps/api/.env.example apps/api/.env && echo '✅ Setup complete! Update apps/api/.env with your values, then run: npm run docker:dev'"
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.5",
