--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,83 +2,120 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+env:
+  DATABASE_URL: "postgresql://testuser:testpass@localhost:5432/testdb"
+  JWT_SECRET: "test-jwt-secret-for-ci"
+  GOOGLE_CLIENT_ID: "test-google-client-id"
+  GOOGLE_CLIENT_SECRET: "test-google-client-secret"
 
 jobs:
-  # --- Job d'Intégration Continue ---
-  ci-pipeline:
+  # --- Continuous Integration Job ---
+  ci:
     name: Continuous Integration
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
-      - name: 1. Checkout Code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
-      - name: 3. Install Dependencies
+      - name: Install Dependencies
         run: npm ci
 
-      - name: 4. Run Linter
+      - name: Setup Environment Variables
+        run: |
+          cd apps/api
+          cp .env.example .env
+          echo "DATABASE_URL=${{ env.DATABASE_URL }}" > .env
+          echo "JWT_SECRET=${{ env.JWT_SECRET }}" >> .env
+          echo "GOOGLE_CLIENT_ID=${{ env.GOOGLE_CLIENT_ID }}" >> .env
+          echo "GOOGLE_CLIENT_SECRET=${{ env.GOOGLE_CLIENT_SECRET }}" >> .env
+          echo "PORT=8080" >> .env
+          echo "NODE_ENV=test" >> .env
+          echo "WEB_APP_URL=http://localhost:5173" >> .env
+
+      - name: Generate Prisma Client & Run Migrations
+        run: |
+          cd apps/api
+          npx prisma generate
+          npx prisma migrate deploy
+
+      - name: Run Linter
         run: npm run lint
 
-      - name: 5. Run Tests & Generate Coverage
-        run: npm test -- --coverage
+      - name: Run Tests
+        run: npm test
 
-      - name: 6. Upload Coverage Report
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # Secret à ajouter dans GitHub
-
-      - name: 7. Build Application
+      - name: Build Application
         run: npm run build
 
-  # --- Job de Déploiement Continu ---
-  cd-pipeline:
-    name: Continuous Deployment
+  # --- Simple Deployment Job ---
+  deploy:
+    name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: ci-pipeline # Dépend du succès de la CI
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # Condition de déclenchement
+    needs: ci
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-      - name: 1. Checkout Code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: 3. Build and Push API Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./apps/api/Dockerfile # Assurez-vous d'avoir ce Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/adopte1etudiant-api:latest,${{ secrets.DOCKERHUB_USERNAME }}/adopte1etudiant-api:${{ github.sha }}
-
-      - name: 4. Build and Push Web Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./apps/web/Dockerfile # Assurez-vous d'avoir ce Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/adopte1etudiant-web:latest,${{ secrets.DOCKERHUB_USERNAME }}/adopte1etudiant-web:${{ github.sha }}
-
-      - name: 5. Deploy to Production
+      - name: Deploy to Production Server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USERNAME }}
           key: ${{ secrets.PROD_SSH_KEY }}
           script: |
+            # Navigate to project directory
             cd ~/adopte1etudiant-mvp
-            docker-compose pull
-            docker-compose up -d --force-recreate
-            docker-compose exec -T api npm run db:migrate:prod
+
+            # Pull latest changes
+            git pull origin main
+
+            # Create .env file if it doesn't exist
+            if [ ! -f ".env" ]; then
+              echo "Creating .env file from template..."
+              cp .env.production.example .env
+              echo "Please update .env file with your production values!"
+              exit 1
+            fi
+
+            # Install dependencies
+            npm ci --production
+
+            # Build the application
+            npm run build
+
+            # Run database migrations
+            cd apps/api
+            npx prisma migrate deploy
+
+            # Restart services (assuming PM2 or similar process manager)
+            pm2 restart adopte1etudiant || pm2 start npm --name "adopte1etudiant" -- start
+
+            echo "✅ Deployment completed successfully!"
