--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
@@ -18,15 +19,16 @@
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^8.4.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/oauth2": "^5.0.0",
     "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
     "core": "file:../../packages/core",
     "db-postgres": "file:../../packages/db-postgres",
     "fastify": "^4.24.3",
-    "fastify-oauth2": "^4.6.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "shared-types": "file:../../packages/shared-types",
+    "speakeasy": "^2.0.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.24.6"
   },
@@ -35,6 +37,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/speakeasy": "^2.0.10",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
