--- a/packages/db-postgres/package.json
+++ b/packages/db-postgres/package.json
@@ -2,6 +2,7 @@
   "name": "db-postgres",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
