--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,9 +73,9 @@ jobs:
       - name: Build Application
         run: npm run build
 
-  # --- Simple Deployment Job ---
-  deploy:
-    name: Deploy to Production
+  # --- Build and Push Docker Images Job ---
+  build_and_push:
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
     needs: ci
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -84,6 +84,49 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push API image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          target: api
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/api:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/api:latest
+          cache-from: type=gha,scope=api
+          cache-to: type=gha,scope=api,mode=max
+
+      - name: Build and push Web image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          target: web
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/web:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/web:latest
+          cache-from: type=gha,scope=web
+          cache-to: type=gha,scope=web,mode=max
+
+  # --- Deploy to Production Job ---
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
       - name: Deploy to Production Server
         uses: appleboy/ssh-action@master
         with:
@@ -94,28 +137,43 @@ jobs:
             # Navigate to project directory
             cd ~/adopte1etudiant-mvp
 
-            # Pull latest changes
-            git pull origin main
+            # The docker-compose.prod.yml should be already on the server.
+            # We are removing `git pull` as deployments should be based on
+            # immutable artifacts (Docker images), not on the latest git commit.
 
-            # Create .env file if it doesn't exist
-            if [ ! -f ".env" ]; then
-              echo "Creating .env file from template..."
-              cp .env.production.example .env
-              echo "Please update .env file with your production values!"
-              exit 1
-            fi
+            # Set up .env file from secrets
+            echo "Creating .env file from secrets..."
+            echo "POSTGRES_USER=${{ secrets.PROD_POSTGRES_USER }}" > .env
+            echo "POSTGRES_PASSWORD=${{ secrets.PROD_POSTGRES_PASSWORD }}" >> .env
+            echo "POSTGRES_DB=${{ secrets.PROD_POSTGRES_DB }}" >> .env
+            echo "DATABASE_URL=postgresql://${{ secrets.PROD_POSTGRES_USER }}:${{ secrets.PROD_POSTGRES_PASSWORD }}@postgres:5432/${{ secrets.PROD_POSTGRES_DB }}?schema=public" >> .env
+            echo "JWT_SECRET=${{ secrets.PROD_JWT_SECRET }}" >> .env
+            echo "WEB_APP_URL=${{ secrets.PROD_WEB_APP_URL }}" >> .env
+            echo "GOOGLE_CLIENT_ID=${{ secrets.PROD_GOOGLE_CLIENT_ID }}" >> .env
+            echo "GOOGLE_CLIENT_SECRET=${{ secrets.PROD_GOOGLE_CLIENT_SECRET }}" >> .env
+            echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
 
-            # Install dependencies
-            npm ci --production
+            # Add image tags to .env file for docker-compose to use
+            # IMPORTANT: Your docker-compose.prod.yml services must use these variables.
+            # Example:
+            # services:
+            #   api:
+            #     image: ${{ secrets.DOCKERHUB_USERNAME }}/api:${API_IMAGE_TAG:-latest}
+            #   web:
+            #     image: ${{ secrets.DOCKERHUB_USERNAME }}/web:${WEB_IMAGE_TAG:-latest}
+            echo "API_IMAGE_TAG=${{ github.sha }}" >> .env
+            echo "WEB_IMAGE_TAG=${{ github.sha }}" >> .env
 
-            # Build the application
-            npm run build
+            # Log in to Docker Hub
+            echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+            # Pull latest images using the specific commit SHA tag
+            docker compose -f docker-compose.prod.yml pull
+
+            # Start services
+            docker compose -f docker-compose.prod.yml up -d --force-recreate
 
             # Run database migrations
-            cd apps/api
-            npx prisma migrate deploy
-
-            # Restart services (assuming PM2 or similar process manager)
-            pm2 restart adopte1etudiant || pm2 start npm --name "adopte1etudiant" -- start
+            docker compose -f docker-compose.prod.yml exec -T api npx prisma migrate deploy
 
             echo "✅ Deployment completed successfully!"
