--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,12 +13,8 @@ NODE_ENV=development
 
 # OAuth Providers
 # Note: For development, the callback URL should be http://localhost:8080/api/auth/[provider]/callback
-# You must create developer apps on Google and LinkedIn to get these credentials.
+# You must create developer apps on Google to get these credentials.
 
 # Google
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
-
-# LinkedIn
-LINKEDIN_CLIENT_ID="your-linkedin-client-id"
-LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret" 
