--- a/.env.production.example
+++ b/.env.production.example
@@ -12,6 +12,11 @@ DOCKERHUB_USERNAME=your-dockerhub-username
 API_IMAGE_TAG=latest
 WEB_IMAGE_TAG=latest
 
+# -------------------------------------
+# Frontend Configuration
+# -------------------------------------
+# The API base URL for the frontend (should be /api in production)
+VITE_API_URL=/api
 
 # -------------------------------------
 # Database Configuration
@@ -23,8 +28,8 @@ POSTGRES_DB=your-prod-db-name
 
 # This is the full connection string used by the API to connect to the database.
 # Note that the host is 'postgres', which is the service name in docker-compose.prod.yml.
+# This will be automatically constructed from the individual components below.
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
-
 
 # -------------------------------------
 # Application Secrets
@@ -34,7 +39,6 @@ JWT_SECRET=your-super-secure-jwt-secret
 
 # The public-facing URL of your web application.
 WEB_APP_URL=https://your-domain.com
-
 
 # -------------------------------------
 # Google OAuth Credentials
