--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -5,12 +5,9 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
-
-  location /api {
-    proxy_pass http://api:8080;
+  # Proxy only /api/ requests to the backend API container
+  location /api/ {
+    proxy_pass http://api:8080/api/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -19,5 +16,10 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_cache_bypass $http_upgrade;
+  }
+
+  # Serve static files and handle SPA routing
+  location / {
+    try_files $uri $uri/ /index.html;
   }
 } 
