--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -340,6 +340,17 @@ jobs:
               fi
             done
 
+            # Run database seeding
+            echo "🌱 Running database seeding..."
+            if $DOCKER_COMPOSE -f docker-compose.prod.yml exec -T api npx prisma db seed; then
+              echo "✅ Database seeding completed successfully"
+            else
+              echo "❌ Database seeding failed"
+              echo "API container logs:"
+              $DOCKER_COMPOSE -f docker-compose.prod.yml logs --tail=50 api
+              exit 1
+            fi
+
             # Enhanced health checks
             echo "🏥 Performing comprehensive health checks..."
             sleep 10
