--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,6 +10,7 @@ env:
   JWT_SECRET: "test-jwt-secret-for-ci"
   GOOGLE_CLIENT_ID: "test-google-client-id"
   GOOGLE_CLIENT_SECRET: "test-google-client-secret"
+  NATIVE_DEPLOY: ${{ secrets.NATIVE_DEPLOY }}
 
 jobs:
   # --- Continuous Integration Job ---
@@ -154,14 +155,25 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.prod.yml to production server
+      - name: Copy compose files to production server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USERNAME }}
           key: ${{ secrets.PROD_SSH_KEY }}
-          source: "docker-compose.prod.yml"
+          source: "docker-compose.prod.yml,docker-compose.db.yml"
           target: "~/adopte1etudiant-mvp/"
+          strip_components: 0
+
+      - name: Upload source code for native deploy
+        if: env.NATIVE_DEPLOY == 'true'
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USERNAME }}
+          key: ${{ secrets.PROD_SSH_KEY }}
+          source: "./"
+          target: "~/adopte1etudiant-mvp/source"
           strip_components: 0
 
       - name: Deploy to Production Server
@@ -206,6 +218,18 @@ jobs:
             echo "📁 Setting up project directory..."
             mkdir -p ~/adopte1etudiant-mvp
             cd ~/adopte1etudiant-mvp
+
+            if [ "$NATIVE_DEPLOY" = "true" ]; then
+              echo "🛠️ Running native deployment (no Docker for API and web)..."
+              cd source
+              $DOCKER_COMPOSE -f ../docker-compose.db.yml up -d
+              npm ci
+              npm run build --workspace=apps/api
+              npm run build --workspace=apps/web
+              nohup npm start --workspace=apps/api >/tmp/api.log 2>&1 &
+              nohup npx serve -s apps/web/dist -l 80 >/tmp/web.log 2>&1 &
+              exit 0
+            fi
 
             # Use the committed docker-compose.prod.yml instead of generating it
             echo "📋 Using committed docker-compose.prod.yml..."
