--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "db:migrate:dev": "npm run migrate:dev --workspace=apps/api",
     "db:studio": "npm run studio --workspace=apps/api",
     "turbosetup": "cp apps/api/.env.example apps/api/.env",
-    "db:seed": "npm run db:seed --workspace=api",
-    "db:clean": "npm run db:clean --workspace=api",
+    "db:seed": "npm run db:seed --workspace=apps/api",
+    "db:clean": "npm run db:clean --workspace=apps/api",
     "docker:dev": "docker compose up --build",
     "docker:dev:down": "docker compose down",
     "docker:dev:clean": "docker compose down -v && docker system prune -f",
