--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,18 +7,23 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
+    "pretest": "npm run generate",
     "test": "vitest run --coverage",
     "test:watch": "vitest --watch",
     "test:specific": "vitest run --reporter=verbose",
     "test:coverage": "vitest run --coverage --reporter=verbose",
     "test:no-coverage": "vitest run --reporter=verbose",
     "seed": "tsx prisma/seed.ts",
+    "db:seed": "prisma db seed",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
     "studio": "prisma studio",
     "generate": "prisma generate",
     "db:clean": "prisma migrate reset --force"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
@@ -51,6 +56,7 @@
     "@types/validator": "^13.15.2",
     "@vitest/coverage-v8": "^3.2.4",
     "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vite": "^6.1.6",
