feat: add comprehensive testing infrastructure and modernize build setup
- Add Vitest testing framework with React Testing Library integration
- Create test configuration and setup files for web app
- Add HomePage component with initial test coverage
- Update Turbo.json to modern tasks syntax with proper dependencies
- Consolidate Docker configuration by removing main compose file
- Add environment example files for better developer onboarding
- Update TypeScript configurations for enhanced test support
- Modernize CI/CD workflow and dependency management
- Add comprehensive documentation including BLOC2 referential
- Improve database connection handling with proper URL parameter management
- Synchronize database ports across all configuration files
- Add extensive test scripts for different testing scenarios
- Update architecture and development documentation

Breaking changes:
- Remove docker-compose.yml (use docker-compose.db.yml for local dev)
- Remove Dockerfile.dev (simplified development setup)
- Database port configuration now uses environment variables

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Security Audit
         run: |
-          npm audit fix || npm audit fix --force
+          npm audit --audit-level=high || echo "Security audit completed with warnings"
           npm audit || true
 
       - name: Security Scan Dependencies
@@ -85,11 +85,11 @@ jobs:
       - name: Run Linter
         run: npm run lint
 
+      - name: Build Workspace Packages
+        run: npm run build
+
       - name: Run Tests
         run: npm test
-
-      - name: Build Application
-        run: npm run build
 
   # --- Build and Push Docker Images Job ---
   build_and_push:
