--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:specific": "vitest run --reporter=verbose",
+    "test:coverage": "vitest run --coverage --reporter=verbose",
+    "test:no-coverage": "vitest run --reporter=verbose"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,13 +24,19 @@
     "shared-types": "file:../../packages/shared-types"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "jsdom": "^23.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^1.6.1",
+    "zod": "^3.22.4"
   }
 }
