--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   postgres:
     image: postgres:15-alpine
@@ -10,7 +9,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
