feat: comprehensive API documentation, monitoring, and project restructure
Major improvements:

🔧 API Documentation & Swagger Integration:
- Add comprehensive Swagger/OpenAPI documentation with @fastify/swagger
- Implement detailed API schemas for all endpoints (auth, offers, applications, etc.)
- Add API documentation generation scripts and validation tools
- Create extensive developer guides for API integration and testing

📊 Monitoring & Testing Infrastructure:
- Add monitoring suite with Postman collections and Artillery performance tests
- Implement API contract testing and validation scripts
- Add comprehensive test coverage improvements across all modules
- Create monitoring dashboard configuration

📁 Documentation Restructure:
- Reorganize docs into logical categories:
  - developer-guides/ (API docs, testing, authentication)
  - project-management/ (CI/CD, test plans, troubleshooting)
  - technical-guides/ (architecture, database, security)
  - user-guides/ (user manual, referential)
- Add detailed API setup summaries and troubleshooting guides

🛠 Code Quality & Architecture:
- Enhance service layer architecture with improved error handling
- Add skill normalization utilities for better data consistency
- Improve controller implementations with better validation
- Update route definitions with comprehensive Swagger annotations

📦 Dependencies & Scripts:
- Add Swagger UI and documentation generation tools
- Include monitoring and performance testing capabilities
- Add npm scripts for docs generation, validation, and monitoring
- Update build and development workflow scripts

🔒 Security & Authentication:
- Enhance authentication middleware and error handling
- Improve two-factor authentication implementation
- Add better session and cookie management

This commit represents a major milestone in API maturity, documentation completeness, and development workflow optimization.

--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,25 @@ dist/
 
 # Cursor
 .cursorindexingignore
-.specstory/ 
+.specstory/
+
+# Generated API documentation
+apps/api/docs/api-spec.json
+apps/api/docs/api-spec.yaml
+
+# Monitoring reports and logs
+newman/
+newman-report*.json
+artillery-report*.json
+performance-report*.html
+
+# Temporary files
+git_staged_changes.txt
+*.tmp
+*.bak
+*~
+
+# Cookie files and test artifacts
+cookies.txt
+test_cookies.txt
+*_cookies.txt
